minor updates to last figure

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -218,7 +218,8 @@ plot(names(ts_m_i_wd),
      ts_m_i_wd,
      type = 'l',
      main = "Reproducible Rese,arch Assignment 1
-     Average daily activity pattern by time of day",
+     Average daily activity pattern by time of day
+     Weekday Activity",
      xlab = "",
      ylab = "Average number of steps"
      )
@@ -226,17 +227,11 @@ plot(names(ts_m_i_wd),
 plot(names(ts_m_i_we),
      ts_m_i_we,
      type = 'l',
-     xlab = "Time of day",
+     main = "Weekend Activity",
+     xlab = "Time of day (24hr time)",
      ylab = "Average number of steps"
      )
 
-#library(ggplot2)
-#qplot(data = the_data,
-#     facets = wkdaywkend,
-#     main = "Reproducible Rese,arch Assignment 1
-#     Average daily activity pattern by time of day",
-#     xlab = "Time of day",
-#     ylab = "Average number of steps")
 ```
 
 [1]: https://github.com/whanrott/RepData_PeerAssessment1 
